# willowvoice-linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  uninstall.sh
data/applications/: willow-dictate-ptt.desktop.in  willow-voice-url.desktop.in  willow-voice.desktop.in
data/systemd/user/: willow-dictate-ptt.service.in  willow-voice.service.in  willow-ydotoold.service.in
data/udev/: 70-willow-uinput.rules
docs/: TROUBLESHOOTING.md
src/ptt/: main.cpp
tests/: run.sh  test_callback.sh  test_clipboard_race.sh  test_dry_run.sh  test_safety.sh  test_transcript.sh
tests/fakes/: systemctl  wl-copy  wl-paste  ydotool
versions/: willow.env
